# sip-client

./: AccountsScreen.qml  CMakeLists.txt  CallScreen.qml  ContactsScreen.qml  HistoryScreen.qml  Main.qml  SettingsScreen.qml  main.cpp
Core/: audiomanager.cpp  audiomanager.h  databasemanager.cpp  databasemanager.h  sipmanager.cpp  sipmanager.h
core/: accountsmanager.cpp  accountsmanager.h  audiomanager.cpp  audiomanager.h  callmanager.cpp  callmanager.h  databasemanager.cpp  databasemanager.h  sipmanager.cpp  sipmanager.h  transportmanager.cpp  transportmanager.h
models/: accountsmodel.cpp  accountsmodel.h  contactsmodel.cpp  contactsmodel.h  historymodel.cpp  historymodel.h  historyproxymodel.cpp  historyproxymodel.h  settingsmanager.cpp  settingsmanager.h  sipaccount.cpp  sipaccount.h  sipcall.cpp  sipcall.h
ui/: Main.qml
ui/screens/: AccountsScreen.qml  CallScreen.qml  ContactsScreen.qml  HistoryScreen.qml  SettingsScreen.qml
ui/utils/: Utils.js
